fixing slider arrow spacing

--- a/styles/pages/_home.scss
+++ b/styles/pages/_home.scss
@@ -440,14 +440,14 @@ position: absolute;
   height: 100%;
   z-index: 10;
   @media #{$small-screen} {
-   left: -10%;
+   left: -6%;
   }
 
   @media #{$medium-screen} {
-   left: -10%;
+   left: -8%;
   }
   @media #{$large-screen}  {
-    left: -10%;
+    left: -8%;
    }
    @media #{$xlarge-screen}  {
       left: -180px;
@@ -464,7 +464,7 @@ position: absolute;
    }
 
   @media #{$medium-screen} {
-    right: -10%;
+    right: -11%;
     }
 
   @media #{$large-screen}  {
@@ -639,12 +639,12 @@ line-height: 1em;
   }
   @media #{$large-screen}  {
   font-size: 55px;
-  padding-top: 100px;
+  padding-top: 130px;
   padding-bottom: 30px;
   }
   @media #{$xlarge-screen}  {
 font-size: 73px;
-padding-top: 100px;
+padding-top: 150px;
 padding-bottom: 30px;
   }
 
@@ -884,6 +884,9 @@ font-size: 30px;
   width: 10%;
   height: 100%;
   z-index: 10;
+  @media #{$small-screen} {
+  left: 2%;
+  }
 }
 
 .section04 .slick-next {
@@ -1166,12 +1169,67 @@ z-index: 30;
 }
 
 .section05 .slick-next {
-    right: 47px;
+    right: 50px;
+    @media #{$small-screen} {
+      right: 2%;
+     }
+
+    @media #{$medium-screen} {
+      right: 3%;
+      }
 }
 
 .section05 .slick-prev {
-    left: 20px;
+    left: 30px;
     z-index: 10;
+    @media #{$small-screen} {
+     left: 2%;
+    }
+
+    @media #{$medium-screen} {
+     left: 2%;
+    }
+}
+#section02 .slick-prev {
+  left: -180px;
+  top: 0;
+  width: 10%;
+  height: 100%;
+  z-index: 10;
+  @media #{$small-screen} {
+   left: -6%;
+  }
+
+  @media #{$medium-screen} {
+   left: -8%;
+  }
+  @media #{$large-screen}  {
+    left: -8%;
+   }
+   @media #{$xlarge-screen}  {
+      left: -180px;
+    }
+}
+
+#section02 .slick-next {
+  right: -180px;
+  top: 0;
+  width: 10%;
+  height: 100%;
+  @media #{$small-screen} {
+    right: -10%;
+   }
+
+  @media #{$medium-screen} {
+    right: -11%;
+    }
+
+  @media #{$large-screen}  {
+    right: -10%;
+   }
+   @media #{$xlarge-screen}  {
+    right: -180px;
+    }
 }
 
 .section05 .slick-slide>div {
